--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -13,6 +13,9 @@
             <li>
                 <a href="/logout">Logout</a>
             </li>
+            <li>
+                <a href="/notas">Notas</a>
+            </li>
             {% else %}
             <li>
                 <a href="/signin">Signin</a>
