--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -1,3 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
+<link rel="stylesheet" type="text/css" href="../static/css/index.css">
+<h1>App de notas</h1>
 {% endblock %}
