--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -18,7 +18,10 @@
             </li>
             {% else %}
             <li>
-                <a href="/signin">Signin</a>
+                <a href="/signin">Sign in</a>
+            </li>
+            <li>
+                <a href="/signup">Sign up</a>
             </li>
             {% endif %}
         </ul>
