--- a/tasks/templates/notas.html
+++ b/tasks/templates/notas.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<link rel="stylesheet" type="text/css" href="../static/css/stye.css">
+<link rel="stylesheet" type="text/css" href="../static/css/index.css">
 <h1>Notas</h1>
+
+    <a href="/addNotas">Nueva nota</a>
 
 <ul>
     {% for nota in notas %}
