--- a/tasks/templates/signin.html
+++ b/tasks/templates/signin.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <nav>
-        <ul>
-            <li>
-                <a href="/signup">Signup</a>
-            </li>
-        </ul>
-    </nav>
-    <h1>Signin</h1>
+<link rel="stylesheet" type="text/css" href="../static/css/stye.css">
+<link rel="stylesheet" type="text/css" href="../static/css/index.css">
+
+<div class="container">
+
+    <h1>Sign in</h1>
+    <h5>(App de notas)</h5>
+    
     {{Error}}
     <form action="/signin/" method="POST">
         {% csrf_token %}
@@ -17,4 +17,5 @@
             Signin
         </button>
     </form>
+</div>
 {% endblock %}
