--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-<link rel="stylesheet" type="text/css" href="../static/css/index.css">
-<h1>App de notas</h1>
+    <link rel="stylesheet" type="text/css" href="../static/css/index.css">
+    <style>
+        h1 {
+            text-align: center;
+            font-family: 'Arial', sans-serif;
+            color: #333;
+        }
+    </style>
+    <h1>App de notas</h1>
 {% endblock %}
