--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        nav {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+        }
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: space-around;
+        }
+
+        li {
+            margin-right: 15px;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            padding: 5px 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        a:hover {
+            background-color: #555;
+        }
+    </style>
 </head>
 <body>
-    
+
     <nav>
         <ul>
             {% if user.is_authenticated %}
@@ -15,6 +55,9 @@
             </li>
             <li>
                 <a href="/notas">Notas</a>
+            </li>
+            <li>
+                <a href="/addNotas">AddNotas</a>
             </li>
             {% else %}
             <li>
@@ -26,10 +69,9 @@
             {% endif %}
         </ul>
     </nav>
-        
+
     {% block content %}
     {% endblock %}
-
 
 </body>
 </html>
