--- a/tasks/templates/notas.html
+++ b/tasks/templates/notas.html
@@ -1,19 +1,37 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<link rel="stylesheet" type="text/css" href="../static/css/stye.css">
-<link rel="stylesheet" type="text/css" href="../static/css/index.css">
-<h1>Notas</h1>
 
-    <a href="/addNotas">Nueva nota</a>
+<div class="row">
+    
+    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+        <h1>App de notas</h1>
+        <div class="table-resposive py-2">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th class="text-center">Nombre</th>
+                        <th class="text-center">Fecha</th>
+                        <th colspan="3" class="text-center">Acciones</th>
+                        
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    {% for nota in notas %}
+                        <tr>
+                            <td>{{nota.title}}</td>
+                            <td>{{nota.datecompleted}}</td>
+                            <td><a href="getNota/{{nota.title}}" class="btn btn-info">Ver</a></td>
+                            <td><a href="editNota/{{nota.title}}" class="btn btn-info">Editar</a></td>
+                            <td><a href="eliminacionNota/{{nota.title}}" class="btn btn-info">Eliminar</a></td>
+                           
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-<ul>
-    {% for nota in notas %}
-
-    <li>{{nota.title}}</li>
-
-    {% endfor %}
-
-</ul>
+</div>
 
 {% endblock %}
