--- a/tasks/templates/notas.html
+++ b/tasks/templates/notas.html
@@ -20,7 +20,7 @@
                     {% for nota in notas %}
                         <tr>
                             <td>{{nota.title}}</td>
-                            <td>{{nota.datecompleted}}</td>
+                            <td>{{nota.created}}</td>
                             <td><a href="getNota/{{nota.title}}" class="btn btn-info">Ver</a></td>
                             <td><a href="editNota/{{nota.title}}" class="btn btn-info">Editar</a></td>
                             <td><a href="eliminacionNota/{{nota.title}}" class="btn btn-info">Eliminar</a></td>
