--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -1,11 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<link rel="stylesheet" type="text/css" href="../static/css/stye.css">
-<link rel="stylesheet" type="text/css" href="../static/css/index.css">
 
-<div class="container">
-
+<div class="container-fluid">
 
 
 <h1>Sign up</h1>
