--- a/tasks/templates/notas.html
+++ b/tasks/templates/notas.html
@@ -21,10 +21,10 @@
                         <tr>
                             <td>{{nota.title}}</td>
                             <td>{{nota.created}}</td>
-                            <td><a href="getNota/{{nota.title}}" class="btn btn-info">Ver</a></td>
-                            <td><a href="editNota/{{nota.title}}" class="btn btn-info">Editar</a></td>
-                            <td><a href="eliminacionNota/{{nota.title}}" class="btn btn-info">Eliminar</a></td>
-                           
+                            <td><a href="{% url 'getNota' nota.id %}" class="btn btn-info">Ver</a></td>
+                            <td><a href="{% url 'editarNota' nota.id %}" class="btn btn-info">Editar</a></td>
+                            <td><a href="{% url 'eliminacionNota' nota.id %}" class="btn btn-info">Eliminar</a></td>
+                            
                         </tr>
                     {% endfor %}
                 </tbody>
