--- a/tasks/templates/editarNota.html
+++ b/tasks/templates/editarNota.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<h1>EditarNota</h1>
-<div class="container">
-    <form action="{% url 'editarNota' nota_id %}" method="POST">
+  <div style="text-align: center; margin: 20px;">
+    <h1 style="font-size: 24px; color: #333;">Editar Nota</h1>
+    <div style="margin-top: 20px;">
+      <form action="{% url 'editarNota' nota_id %}" method="POST">
         {% csrf_token %}
-        {{ form }}
-        <button type="submit">Save</button>
-    </form>
-</div>
+        {{ form.as_p }}
+        <button type="submit" style="background-color: rgb(50, 91, 203); color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; margin-top: 10px;">Guardar</button>
+      </form>
+    </div>
+  </div>
 {% endblock %}
